Event-centered calendar view + remove Preschool references
- Removed '(Preschool)' from all PCB labels - now just 'PCB'
- Refactored calendar to be event-centered not door-centered
- Events group by name + time (e.g., 'Ash Wednesday Service' shows once with all doors)
- Event detail modal shows all doors in event with individual statuses
- Delete function removes all door schedules in event
- Door filter still works - shows events that include the selected door
- Better matches how people think: 'What events need doors?' not 'What door schedules exist?'
- Calendar title shows door count when > 1: 'Ash Wednesday Service (3 doors)'

--- a/wwwroot/calendar.html
+++ b/wwwroot/calendar.html
@@ -126,7 +126,7 @@
                         <div class="building-group">
                             <label class="building-label">
                                 <span class="building-emoji">👶</span>
-                                PCB (Preschool)
+                                PCB
                             </label>
                             <select id="doorFilterPCB" class="form-select modern-select" onchange="filterDoors('pcb')">
                                 <option value="">Select door...</option>
@@ -207,7 +207,7 @@
                                 <option value="Wade">Wade Building</option>
                                 <option value="Main Church">Main Church</option>
                                 <option value="Student Center">Student Center</option>
-                                <option value="PCB">PCB (Preschool Children's Building)</option>
+                                <option value="PCB">PCB</option>
                             </select>
                         </div>
                         
@@ -448,7 +448,7 @@
                                 <div class="building-header">
                                     <div class="building-title">
                                         <span class="building-emoji">👶</span>
-                                        <span>PCB (Preschool)</span>
+                                        <span>PCB</span>
                                     </div>
                                     <div class="building-actions">
                                         <button type="button" class="btn btn-sm btn-time-toggle" onclick="toggleCustomTimes('pcb')">
