Add welcome section with user name + restore beautiful UI styling

--- a/wwwroot/calendar.html
+++ b/wwwroot/calendar.html
@@ -31,6 +31,9 @@
                 </div>
             </div>
             <div class="navbar-actions">
+                <div class="welcome-section me-3">
+                    <span class="welcome-text">Welcome, <span id="userName" class="user-name">Loading...</span></span>
+                </div>
                 <button class="btn modern-btn btn-glass me-2" onclick="syncDoors()">
                     <span id="syncSpinner" class="spinner-border spinner-border-sm d-none me-1"></span>
                     <span class="btn-icon">🔄</span>
